@@ -1,8 +1,3 @@
-#########
-# Author:        gq1
-# Created:       2009-09-21
-#
-
 use strict;
 use warnings;
 use Test::More tests => 14;
@@ -12,6 +7,17 @@ use Perl6::Slurp;
 use JSON;
 
 use_ok ('npg_qc::autoqc::results::tag_decode_stats');
+
+
+sub _prune_result_hash {
+  my $result = shift;
+  my %to_remove =
+    map { $_ => 1 }
+    qw/__CLASS__ composition info path/;
+  foreach my $key (keys %{$result}) {
+    ($to_remove{$key} or $key =~ /\A_/ ) and delete $result->{$key};
+  }
+}
 
 my $tempdir = tempdir( CLEANUP => 1);
 {
@@ -70,10 +76,8 @@ my $tempdir = tempdir( CLEANUP => 1);
     };
 
     ok( exists $hash->{__CLASS__}, q{__CLASS__ key found} );
-    delete $hash->{'__CLASS__'};
-    delete $hash->{'composition'};
-
-    is_deeply( $hash, $expected_hash_structure, q{expected results obtained} );
+    is_deeply( _prune_result_hash($hash),
+               _prune_result_hash($expected_hash_structure), q{expected results obtained} );
 }
 
 {
